# catbox

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml  release.yml  rust.yml
catbox/: all.html  index.html  sidebar-items.js
catbox/album/: fn.add_files.html  fn.create.html  fn.delete.html  fn.edit.html  fn.remove_files.html  index.html  sidebar-items.js
catbox/file/: fn.delete.html  fn.from_file.html  fn.from_url.html  index.html  sidebar-items.js
catbox/litter/: fn.upload.html  index.html  sidebar-items.js
lib/: file.rs  lib.rs  litter.rs
src/: args.rs  main.rs
src/catbox/: album.rs.html  file.rs.html  helper.rs.html  lib.rs.html  litter.rs.html
src/lib/: album.rs  file.rs  helper.rs  lib.rs  litter.rs
src/test/: catbox.rs  mod.rs
