[package]
name = "catbox"
description = "Implementation of Catbox.moe's API"
version = "0.3.4"
edition = "2021"
homepage = "https://github.com/Savolae/catbox"
repository = "https://github.com/Savolae/catbox"
readme = "README.md"
documentation = "https://savolae.github.io/catbox/catbox/index.html"
license = "MIT"
keywords = ["api", "upload"]
categories = ["command-line-utilities", "filesystem", "api-bindings"]

[dependencies]
clap = { version = "2.33.3", default-features = false }
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["io"] }

[dev-dependencies]
tempfile = "3.2.0"
sha2 = "0.9.8"

[lib]
name = "catbox"
path = "src/lib/lib.rs"

[[bin]]
name = "catbox"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
