[package]
name = "catbox"
description = "Implementation of Catbox.moe's API"
version = "0.7.0"
edition = "2021"
homepage = "https://github.com/Savolae/catbox"
repository = "https://github.com/Savolae/catbox"
readme = "README.md"
documentation = "https://docs.rs/catbox"
license = "MIT"
keywords = ["api", "upload"]
categories = ["command-line-utilities", "filesystem", "api-bindings"]

[dependencies]
clap = { version = "3.1.18", features = ["std", "cargo"] }
futures = "0.3.21"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["multipart", "stream"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
url = "2.2.2"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "catbox"
path = "src/lib/lib.rs"

[[bin]]
name = "catbox"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
