[package]
name = "catbox"
description = "Implementation of Catbox.moe's API"
version = "0.8.1"
edition = "2021"
homepage = "https://github.com/Savolae/catbox"
repository = "https://github.com/Savolae/catbox"
readme = "README.md"
documentation = "https://docs.rs/catbox"
license = "MIT"
keywords = ["api", "upload"]
categories = ["command-line-utilities", "filesystem", "api-bindings"]

[dependencies]
clap = { version = "4.3.0", features = ["std", "cargo", "derive"] }
futures = "0.3.28"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["multipart", "stream"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
url = "2.3.1"

[dev-dependencies]
tempfile = "3.5.0"

[lib]
name = "catbox"
path = "src/lib/lib.rs"

[[bin]]
name = "catbox"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
